# GuptaSoundWave

./: CMakeLists.txt  main.cpp  main_konsole.cpp  main_opencv.cpp  readme.md
RtAudio/: rt_defs.h
RtAudio/_/: RtAudio.cpp
vs/: gupta.vcproj
